tests/should_fail/cycle.stderr
error: Mutually recursive functions: when calling `g`...
  --> cycle.rs:10:1
   |
10 | pub fn g(x: bool) {
   | ^^^^^^^^^^^^^^^^^
   |
note: then `g` calls `f`...
  --> cycle.rs:12:9
   |
12 |         f();
   |         ^^^
note: finally `f` calls `g`.
  --> cycle.rs:6:5
   |
 6 |     g(true);
   |     ^^^^^^^

error: aborting due to 1 previous error

